--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -26,4 +26,4 @@ jobs:
         run: composer install
       # 执行 PHPUnit 测试
       - name: PHPUnit
-        run: ./vendor/bin/phpunit --coverage-text
+        run: ./vendor/bin/phpunit test
