--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -26,6 +26,4 @@ jobs:
         run: composer install
       # 执行 PHPUnit 测试
       - name: PHPUnit
-        run: ./vendor/bin/phpunit tests --coverage-clover coverage.xml
-      - name: Codecov
-        run: bash <(curl -s https://codecov.io/bash)
+        run: ./vendor/bin/phpunit tests --color
