--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -10,7 +10,7 @@ jobs:
     strategy:
       matrix:
         # 测试版本
-        php_version: [8.0]
+        php_version: [5.6, 7.0, 7.4, 8.0]
     runs-on: ubuntu-latest
     steps:
       # 检出代码
